Added 'open to work' switch

--- a/public/locale/lang_en.json
+++ b/public/locale/lang_en.json
@@ -49,7 +49,8 @@
 		"Demonstrated expertise in photo editing and graphic design programs, ensuring precise adjustments and edits for visual assets, seamlessly blending with website design and branding.",
 		"Oversaw the complete content transfer procedure from development to production environments, taking care of all required installations, including server-side configurations."
 	],
-	"contact_text": "Feel free to drop me a message using the form below.<br /><br/>I&#39;m actively seeking chances that enable me to make substantial contributions to a variety of projects and I&#39;m eager to apply my expertise to freelance or part-time contract positions, ideally in a remote setting.<br/><br/>Looking forward to connecting and discussing exciting opportunities together!",
+	"contact_text": "Feel free to drop me a message using the form below.",
+	"contact_text_open": "Feel free to drop me a message using the form below.<br /><br/>I&#39;m actively seeking chances that enable me to make substantial contributions to a variety of projects and I&#39;m eager to apply my expertise to freelance or part-time contract positions, ideally in a remote setting.<br/><br/>Looking forward to connecting and discussing exciting opportunities together!",
 	"contact_thank_you": "Thank you for your message!",
 	"contact_label_first_name": "First name",
 	"contact_label_last_name": "Last name",
