--- a/public/locale/lang_it.json
+++ b/public/locale/lang_it.json
@@ -49,7 +49,8 @@
 		"Dimostrata esperienza nei programmi di editing fotografico e grafico, garantendo aggiustamenti e modifiche precise per gli asset visivi, integrandosi senza soluzione di continuità con il design del sito web e il branding.",
 		"Ho supervisionato l'intera procedura di trasferimento di contenuti dall'ambiente di sviluppo a quello di produzione, occupandomi di tutte le installazioni necessarie, inclusi le configurazioni lato server."
 	],
-	"contact_text": "Lasciami un messaggio utilizzando il modulo qui sotto.<br /><br/>Sono alla ricerca di occasioni che mi permettano di dare un contributo sostanziale a una varietà di progetti e sono desideroso di applicare le mie competenze in posizioni freelance o contrattuali a tempo parziale, idealmente in un contesto remoto.<br/><br/>Non vedo l'ora di connetterci e discutere insieme nuove opportunità!",
+	"contact_text": "Lasciami un messaggio utilizzando il modulo qui sotto.",
+	"contact_text_open": "Lasciami un messaggio utilizzando il modulo qui sotto.<br /><br/>Sono alla ricerca di occasioni che mi permettano di dare un contributo sostanziale a una varietà di progetti e sono desideroso di applicare le mie competenze in posizioni freelance o contrattuali a tempo parziale, idealmente in un contesto remoto.<br/><br/>Non vedo l'ora di connetterci e discutere insieme nuove opportunità!",
 	"contact_thank_you": "Grazie per il tuo messaggio!",
 	"contact_label_first_name": "Nome",
 	"contact_label_last_name": "Cognome",
