Enhannced contact sent message

--- a/public/locale/lang_en.json
+++ b/public/locale/lang_en.json
@@ -102,5 +102,7 @@
 			"title": "Web design and development strategy consulting",
 			"description": "Strategic support for your digital project"
 		}
-	}
+	},
+	"contact_thank_you_title": "Message received! 🚀",
+	"contact_thank_you_message": "Awesome! Your message just landed in my inbox. I'll get back to you faster than WordPress loads an unoptimized site!"
 }
