--- a/public/locale/lang_it.json
+++ b/public/locale/lang_it.json
@@ -53,6 +53,8 @@
 	"contact_text": "Lasciami un messaggio utilizzando il modulo qui sotto.",
 	"contact_text_open": "Lasciami un messaggio utilizzando il modulo qui sotto.<br /><br/>Sono alla ricerca di occasioni che mi permettano di dare un contributo sostanziale a una varietà di progetti e sono desideroso di applicare le mie competenze in posizioni freelance o contrattuali a tempo parziale, idealmente in un contesto remoto.<br/><br/>Non vedo l'ora di connetterci e discutere insieme nuove opportunità!",
 	"contact_thank_you": "Grazie per il tuo messaggio!",
+	"contact_thank_you_title": "Messaggio ricevuto! 🚀",
+	"contact_thank_you_message": "Fantastico! Il tuo messaggio è appena atterrato nella mia inbox. Mi metterò in contatto con te più veloce di quanto WordPress carichi un sito non ottimizzato!",
 	"contact_label_first_name": "Nome",
 	"contact_label_last_name": "Cognome",
 	"contact_label_company": "Azienda",
