--- a/public/locale/lang_it.json
+++ b/public/locale/lang_it.json
@@ -69,7 +69,7 @@
 			"description": "Trasformazione di design statici in temi WordPress completamente funzionali"
 		},
 		"custom_dev": {
-			"title": "Sviluppo di temi e plugin personalizzati per WordPress",
+			"title": "Sviluppo di plugin personalizzati per WordPress",
 			"description": "Creazione di soluzioni su misura per le tue esigenze specifiche"
 		},
 		"seo": {
