--- a/public/locale/lang_en.json
+++ b/public/locale/lang_en.json
@@ -67,7 +67,7 @@
 			"description": "Transform static designs into fully functional WordPress themes"
 		},
 		"custom_dev": {
-			"title": "Development of custom WordPress themes and plugins",
+			"title": "Development of custom WordPress plugins",
 			"description": "Creation of tailored solutions for your specific needs"
 		},
 		"seo": {
